--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ img {
 /* Header Styles */
 header {
     height: 55px;
-    background-color: rgba(113, 16, 0, 0.75);
+    background-color: rgb(0, 59, 136);
 }
 
 header > p {
@@ -65,7 +65,7 @@ header > p {
 }
 
 .cards-container {
-    height: 70%;
+    height: 65%;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -73,7 +73,7 @@ header > p {
 }
 
 .card {
-    width: 75px;
+    width: 70px;
     aspect-ratio: 5 / 7;
     border: 1px solid #777777;
     border-radius: 5px;
@@ -107,7 +107,7 @@ header > p {
 }
 
 .options {
-    margin: 0.5em 0;
+    margin: 0.75em 0;
 }
 
 .btn {
