--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ header > p {
 /* Cards Styles */
 
 .message {
+    color: #FFFFFF;
     font-size: 1.2rem;
     margin: 0.1em 0;
 }
@@ -72,14 +73,22 @@ header > p {
     justify-content: space-around;
 }
 
-.card {
+.card,
+.card-back {
     width: 70px;
     aspect-ratio: 5 / 7;
     border: 1px solid #777777;
     border-radius: 5px;
+    object-fit: cover;
 }
 
-.card > img {
+.card-back.hidden {
+    display: none;
+}
+
+.card > img,
+.card-back > img {
+    width: 100%;
     height: 100%;
 }
 
@@ -171,4 +180,24 @@ header > p {
     height: 100%;
     text-align: center;
     background-color: rgb(0, 59, 136);
+}
+
+@media (min-width: 625px) {
+    .card,
+    .card-back {
+        width: calc(70px + 3vh);
+    }
+
+    .btn {
+        padding: 0.5em 1.5em;
+    }
+
+    .bet {
+        height: 40px;
+    }
+    .bet-amount {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
